Fix AOT namespace trace discovery