@@ -1,5 +1,7 @@
 (ns build
-  (:require [clojure.tools.build.api :as b]))
+  (:require [clojure.edn :as edn]
+            [clojure.string :as str]
+            [clojure.tools.build.api :as b]))
 
 (def lib 'seon/seon)
 (def version
@@ -20,6 +22,97 @@
 ;; dependency-owned secondary-index source, JVM flags, and writer-only
 ;; dependencies in one basis.
 (def writer-aliases [:writer])
+
+;; The build owns this exact JDK because compiled classes and an AppCDS archive
+;; are JVM-version specific. The development operator selects the same JDK.
+(def writer-java-command
+  "/opt/homebrew/Cellar/openjdk/26.0.1/libexec/openjdk.jdk/Contents/Home/bin/java")
+
+(def writer-jvm-options
+  ["--add-modules" "jdk.incubator.vector"
+   "--enable-native-access=ALL-UNNAMED"
+   "--sun-misc-unsafe-memory-access=allow"
+   "-XX:+UseG1GC" "-Xmx512m"])
+
+(def writer-aot-class-dir "target/seon-writer-aot-classes")
+(def jvm-aot-class-dir "target/seon-jvm-aot-classes")
+
+(defn- checked-process!
+  [params message]
+  (let [result (b/process params)]
+    (when-not (zero? (:exit result))
+      (throw (ex-info message
+                      {:exit (:exit result)
+                       :out (:out result)
+                       :err (:err result)})))
+    result))
+
+(defn- aot-load-order
+  "Discover one main's source-loaded namespace closure in dependency order."
+  [basis root]
+  (let [trace-dir "target/seon-jvm-aot-traces"
+        trace-file (str trace-dir "/" (munge (str root)) ".log")
+        classpath (str/join java.io.File/pathSeparator (:classpath-roots basis))
+        expression
+        (str "(do (require '" root ") "
+             "(prn (into {} (map (juxt #(munge (str %)) identity) "
+             "(loaded-libs)))) (shutdown-agents))")
+        _ (.mkdirs (java.io.File. trace-dir))
+        result (checked-process!
+                {:command-args (into [writer-java-command
+                                      (str "-Xlog:class+load=info:file=" trace-file
+                                           ":uptime,level,tags")]
+                                     (concat writer-jvm-options
+                                             ["-cp" classpath "clojure.main"
+                                              "-e" expression]))
+                 :out :capture :err :capture}
+                (str "AOT namespace discovery failed for " root))
+        munged-namespaces
+        (edn/read-string (last (str/split-lines (:out result))))
+        class-names (->> (str/split-lines (slurp trace-file))
+                         (keep #(second
+                                 (re-find
+                                  #"\[class,load ?\] ([A-Za-z0-9_.$-]+)\$eval\d+\$loading__.*source: __JVM_DefineClass__"
+                                  %)))
+                         distinct)]
+    (vec (reverse (keep munged-namespaces class-names)))))
+
+(defn- compile-aot!
+  "Compile a measured JVM main closure into one reusable class cache."
+  [basis class-dir roots]
+  (b/delete {:path class-dir})
+  (doseq [root roots]
+    (let [ns-compile (aot-load-order basis root)]
+      (when-not (seq ns-compile)
+        (throw (ex-info "AOT namespace discovery produced no source namespaces."
+                        {:root root})))
+      (b/compile-clj {:basis basis
+                      :class-dir class-dir
+                      :ns-compile ns-compile
+                      :java-cmd writer-java-command
+                      :java-opts writer-jvm-options}))))
+
+(defn- writer-aot!
+  "Build writer and shared JVM class caches from their measured closures."
+  [writer-basis]
+  (compile-aot! writer-basis writer-aot-class-dir
+                ['seon.db.server 'seon.embed.preflight])
+  (let [host-basis (b/create-basis {:project "deps.edn"
+                                    :aliases [:writer :host]})]
+    (b/delete {:path jvm-aot-class-dir})
+    (b/copy-dir {:src-dirs [writer-aot-class-dir]
+                 :target-dir jvm-aot-class-dir})
+    (doseq [root ['seon.host 'seon.web.server]]
+      (let [ns-compile (aot-load-order host-basis root)]
+        (when-not (seq ns-compile)
+          (throw (ex-info "AOT namespace discovery produced no source namespaces."
+                          {:root root})))
+        (b/compile-clj {:basis host-basis
+                        :class-dir jvm-aot-class-dir
+                        :ns-compile ns-compile
+                        :java-cmd writer-java-command
+                        :java-opts writer-jvm-options}))))
+  writer-aot-class-dir)
 
 (defn clean [_]
   (b/delete {:path "target"}))
@@ -67,11 +160,12 @@
     ;; from its pinned dependency and is included by the uber dependency basis.
     (b/copy-dir {:src-dirs ["src"]
                  :target-dir server-class-dir})
-    ;; Clojure AOT recursively recompiles loaded dependency sources and can
-    ;; reorder captured-local slots across otherwise identical JVM builds.
-    ;; The stable Java entry point defers the ordinary source `require` to
-    ;; process start, preserving one server implementation and reproducible
-    ;; artifact bytes.
+    ;; AOT is a release-scoped class cache, never a second implementation.
+    ;; Keep sources beside it: `requiring-resolve` owners still retain their
+    ;; ordinary source fallback, while the measured startup closure finds its
+    ;; generated `__init` classes first.
+    (b/copy-dir {:src-dirs [(writer-aot! writer-basis)]
+                 :target-dir server-class-dir})
     (b/javac {:basis writer-basis
               :src-dirs ["java"]
               :class-dir server-class-dir
